--- a/TurretDefence-ClientSide/TurretDefence-ClientSide/TurretDefence-ClientSide.csproj
+++ b/TurretDefence-ClientSide/TurretDefence-ClientSide/TurretDefence-ClientSide.csproj
@@ -7,4 +7,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.10" />
+  </ItemGroup>
+
 </Project>
