changed soliution layout

--- a/TowerDefence-ClientSide/TowerDefence-ClientSide.csproj
+++ b/TowerDefence-ClientSide/TowerDefence-ClientSide.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>TurretDefence_ClientSide</RootNamespace>
+    <RootNamespace>TowerDefence_ClientSide</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
