--- a/TowerDefence-ServerSide/TowerDefence-ServerSide.csproj
+++ b/TowerDefence-ServerSide/TowerDefence-ServerSide.csproj
@@ -5,5 +5,10 @@
     <RootNamespace>TowerDefence_ServerSide</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+  </ItemGroup>
+
 
 </Project>
