--- a/TowerDefence-ServerSide/TowerDefence-ServerSide.csproj
+++ b/TowerDefence-ServerSide/TowerDefence-ServerSide.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TowerDefence-SharedContent\TowerDefence-SharedContent.csproj" />
+  </ItemGroup>
+
 
 </Project>
