--- a/TowerDefence-SharedContent/TowerDefence-SharedContent.csproj
+++ b/TowerDefence-SharedContent/TowerDefence-SharedContent.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>TowerDefence_SharedContent</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
