--- a/TowerDefence-ClientSide/TowerDefence-ClientSide.csproj
+++ b/TowerDefence-ClientSide/TowerDefence-ClientSide.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
