--- a/TowerDefence-ServerSide/TowerDefence-ServerSide.csproj
+++ b/TowerDefence-ServerSide/TowerDefence-ServerSide.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <Content Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
@@ -14,10 +21,6 @@
   <ItemGroup>
     <ProjectReference Include="..\TowerDefence-ClientSide\TowerDefence-ClientSide.csproj" />
     <ProjectReference Include="..\TowerDefence-SharedContent\TowerDefence-SharedContent.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 
